[gd_scene load_steps=28 format=3 uid="uid://crcy7cdwij4v5"]

[ext_resource type="Script" path="res://island/props/props.gd" id="1_nv7hk"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/scatter.gd" id="2_0yebv"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/stack/modifier_stack.gd" id="3_yq768"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/base_modifier.gd" id="4_j5vtg"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/create_inside_random.gd" id="5_luf4g"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/relax.gd" id="6_o3w65"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/project_on_geometry.gd" id="7_ju86h"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/remove_outside_shapes.gd" id="8_2t8ql"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/randomize_transforms.gd" id="8_lmqbq"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/scatter_item.gd" id="9_apyay"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/scatter_shape.gd" id="10_mif28"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/shapes/box_shape.gd" id="11_i6ss8"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/create_inside_grid.gd" id="14_qu2oo"]

[sub_resource type="Resource" id="Resource_rdl08"]
script = ExtResource("5_luf4g")
amount = 10
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 1

[sub_resource type="Resource" id="Resource_2pqpw"]
script = ExtResource("7_ju86h")
ray_direction = Vector3(0, -1, 0)
ray_length = 100.0
ray_offset = 1.0
remove_points_on_miss = true
align_with_collision_normal = true
max_slope = 75.0
collision_mask = 1
exclude_mask = 0
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_0koc8"]
script = ExtResource("6_o3w65")
iterations = 3
offset_step = 3.0
consecutive_step_multiplier = 0.5
use_computeshader = true
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 0

[sub_resource type="Resource" id="Resource_8ll4v"]
script = ExtResource("7_ju86h")
ray_direction = Vector3(0, -1, 0)
ray_length = 100.0
ray_offset = 1.0
remove_points_on_miss = true
align_with_collision_normal = true
max_slope = 75.0
collision_mask = 1
exclude_mask = 0
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_nmnar"]
script = ExtResource("8_2t8ql")
negative_shapes_only = false
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_lepnx"]
script = ExtResource("8_lmqbq")
position = Vector3(0, 0, 0)
rotation = Vector3(20, 360, 20)
scale = Vector3(1.5, 1.5, 1.5)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_kmbq7"]
script = ExtResource("3_yq768")
stack = Array[ExtResource("4_j5vtg")]([SubResource("Resource_rdl08"), SubResource("Resource_2pqpw"), SubResource("Resource_0koc8"), SubResource("Resource_8ll4v"), SubResource("Resource_nmnar"), SubResource("Resource_lepnx")])

[sub_resource type="Resource" id="Resource_gcbw8"]
script = ExtResource("11_i6ss8")
size = Vector3(1, 1, 1)

[sub_resource type="Resource" id="Resource_sq7ho"]
script = ExtResource("14_qu2oo")
spacing = Vector3(2, 2, 2)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 0

[sub_resource type="Resource" id="Resource_78f47"]
script = ExtResource("7_ju86h")
ray_direction = Vector3(0, -1, 0)
ray_length = 100.0
ray_offset = 1.0
remove_points_on_miss = true
align_with_collision_normal = true
max_slope = 75.0
collision_mask = 1
exclude_mask = 0
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_ohp6g"]
script = ExtResource("8_2t8ql")
negative_shapes_only = false
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_ip5dr"]
script = ExtResource("8_lmqbq")
position = Vector3(0, 0, 0)
rotation = Vector3(0, 360, 0)
scale = Vector3(0, 0, 0)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_dk0jf"]
script = ExtResource("3_yq768")
stack = Array[ExtResource("4_j5vtg")]([SubResource("Resource_sq7ho"), SubResource("Resource_78f47"), SubResource("Resource_ohp6g"), SubResource("Resource_ip5dr")])

[sub_resource type="Resource" id="Resource_jidgx"]
script = ExtResource("11_i6ss8")
size = Vector3(1, 1, 1)

[node name="Props" type="Node3D"]
script = ExtResource("1_nv7hk")

[node name="TreesAndRocks" type="Node3D" parent="."]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.64893, 0, -0.774464)
script = ExtResource("2_0yebv")
enabled = false
modifier_stack = SubResource("Resource_kmbq7")
Performance/use_chunks = true
Performance/chunk_dimensions = Vector3(15, 15, 15)

[node name="Tree" type="Node3D" parent="TreesAndRocks"]
script = ExtResource("9_apyay")
source_scale_multiplier = 0.75
path = "res://addons/proton_scatter/demos/assets/pine_tree.tscn"

[node name="LargeRock" type="Node3D" parent="TreesAndRocks"]
script = ExtResource("9_apyay")
proportion = 10
source_scale_multiplier = 0.75
path = "res://addons/proton_scatter/demos/assets/large_rock.tscn"

[node name="SmallRock" type="Node3D" parent="TreesAndRocks"]
script = ExtResource("9_apyay")
proportion = 50
source_scale_multiplier = 0.75
path = "res://addons/proton_scatter/demos/assets/small_rock.tscn"

[node name="ScatterShape" type="Node3D" parent="TreesAndRocks"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0)
script = ExtResource("10_mif28")
shape = SubResource("Resource_gcbw8")

[node name="GrassAndBushes" type="Node3D" parent="."]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.64893, 0, -0.774464)
script = ExtResource("2_0yebv")
enabled = false
modifier_stack = SubResource("Resource_dk0jf")
Performance/use_chunks = true
Performance/chunk_dimensions = Vector3(15, 15, 15)

[node name="Grass" type="Node3D" parent="GrassAndBushes"]
script = ExtResource("9_apyay")
source_scale_multiplier = 2.0
path = "res://addons/proton_scatter/demos/assets/grass_2.tscn"

[node name="Bush" type="Node3D" parent="GrassAndBushes"]
script = ExtResource("9_apyay")
source_scale_multiplier = 0.75
path = "res://addons/proton_scatter/demos/assets/bush.tscn"

[node name="DeadBranch" type="Node3D" parent="GrassAndBushes"]
script = ExtResource("9_apyay")
source_scale_multiplier = 3.0
path = "res://addons/proton_scatter/demos/assets/dead_branch.tscn"

[node name="ScatterShape" type="Node3D" parent="GrassAndBushes"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0)
script = ExtResource("10_mif28")
shape = SubResource("Resource_jidgx")

[connection signal="build_completed" from="TreesAndRocks" to="." method="_on_trees_build_completed"]
[connection signal="build_completed" from="GrassAndBushes" to="." method="_on_grass_build_completed"]
